--- a/index.html
+++ b/index.html
@@ -1,50 +1,100 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0//EN" "http://www.w3.org/TR/REC-html40/strict.dtd">
-<html>
+<html class="grey lighten-3">
 	<head>
 		<meta charset="utf-8">
 		<link href="css/style.css" type="text/css" rel="stylesheet">
 		<!--Import Google Icon Font-->
+
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<!--Import materialize.css-->
+
 		<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 		<!--Let browser know website is optimized for mobile-->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
 	</head>
+
 	<body>
+
 		<!--Import jQuery before materialize.js-->
 		<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+
 		<script type="text/javascript" src="js/materialize.min.js"></script>
-		<div id="div_main_grid" class="grid">
-			<div id="div_main_top" class="row">
-				<div id="div_home_image" class="col" style="width: 10%; height: 100%; align-items: center;">
-					<img id="img_main_logo" src="media/movie_logo.png">
-				</div>
-				<div id="div_main_references" class="row" align="right">
-					<div id="div_movie_list_reference" class="col reference" align="center">
-						<i class="material-icons icon-white" style="font-size: 40px">format_list_bulleted</i>
-					</div>
-					<div id="div_map_reference" class="col reference" align="center">
-						<i class="material-icons icon-white" style="font-size: 40px">map</i>
-					</div>
-					<div id="div_home_reference" class="col reference" align="center">
-						<i class="material-icons icon-white" style="font-size: 40px">home</i>
-					</div>
-					<div id="div_account_reference" class="col reference" align="center">
-						<i class="material-icons icon-white" style="font-size: 40px">account_circle</i>
-					</div>															
-				</div>
+
+		<nav>
+
+			<div class="nav-wrapper teal darken-3">
+
+				<a href="#" class="brand-logo"><img id="img_main_logo" src="media/movie_logo.png"></a>
+
+				<ul id="nav-mobile" class="right hide-on-med-and-down">
+
+					<li><a href="sass.html"><i class="material-icons icon-white" style="font-size: 40px">format_list_bulleted</i></a></li>
+
+					<li><a href="badges.html"><i class="material-icons icon-white" style="font-size: 40px">map</i></a></li>
+
+					<li><a href="collapsible.html"><i class="material-icons icon-white" style="font-size: 40px">home</i></a></li>
+
+					<li><a href="collapsible.html"><i class="material-icons icon-white" style="font-size: 40px">account_circle</i></a></li>
+
+				</ul>
+
 			</div>
-			<div id="div_main_info" class="row" style="height: 90%">
-				<div id="div_card_box" class="col one-quarter-width">
-					Card box
+
+		</nav>
+
+		<div id="div_main_grid" class="grid">
+
+			<div id="div_main_info" class="row" style="height: 100%">
+
+				<div id="div_card_box" class="col s3">
+
+					<div class="row">
+
+					<div class="col s12">
+
+					  <div class="card">
+
+						<div class="card-image">
+
+						  	<img src="media/logoDinosaurio.jpg
+						  ">
+						  	<span class="card-title">Card Title</span>
+
+						</div>
+
+						<div class="card-content">
+
+						  <p>I am a very simple card. I am good at containing small bits of information.
+						  I am convenient because I require little markup to use effectively.</p>
+
+						</div>
+
+						<div class="card-action">
+
+						    <a href="#">This is a link</a>
+
+						</div>
+
+					  </div>
+
+					</div>
+
+				  </div>
+
 				</div>
-				<div id="div_main_map" class="col three-quarter-width">
+
+				<div id="div_main_map" class="col s9">
+
 					<div id="map"></div>				
 					<script src="js/map.js" type="text/javascript"></script>
 					<script src="https://maps.googleapis.com/maps/api/js?callback=myMap"></script>
+
 				</div>
-			</div>
+
 		</div>
 	</body>
 </html>
