--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 
 				<ul id="nav-mobile" class="right hide-on-med-and-down">
 
-					<li><a href="sass.html"><i class="material-icons icon-white" style="font-size: 40px">format_list_bulleted</i></a></li>
+					<li><a href="#"><i class="material-icons icon-white" style="font-size: 40px">format_list_bulleted</i></a></li>
 
-					<li><a href="badges.html"><i class="material-icons icon-white" style="font-size: 40px">map</i></a></li>
+					<li><a href="#"><i class="material-icons icon-white" style="font-size: 40px">map</i></a></li>
 
-					<li><a href="collapsible.html"><i class="material-icons icon-white" style="font-size: 40px">home</i></a></li>
+					<li><a href="#"><i class="material-icons icon-white" style="font-size: 40px">home</i></a></li>
 
-					<li><a href="collapsible.html"><i class="material-icons icon-white" style="font-size: 40px">account_circle</i></a></li>
+					<li><a href="#"><i class="material-icons icon-white" style="font-size: 40px">account_circle</i></a></li>
 
 				</ul>
 
@@ -56,7 +56,7 @@
 
 					<div class="row">
 
-					<div class="col s12">
+					<div id="div_card_column" class="col s12">
 
 					  <div class="card hoverable">
 
@@ -82,10 +82,7 @@
 						</div>
 
 					  </div>
-
-					  <a class="waves-effect waves-light btn" onclick="addMarkersFromList([[-30.421632,-64.186935], [-31.421632,-64.186935], [-32.421632,-64.186935]])">Add Marker</a>
-
-					  <a class="waves-effect waves-light btn" onclick="init()">Add Marker</a>
+					  <a class="waves-effect waves-light btn" onclick="createInfoCard()">create card</a>
 					</div>
 
 				  </div>
@@ -100,5 +97,6 @@
 				</div>
 
 		</div>
+		<script src="js/cards.js" type="text/javascript"></script>
 	</body>
 </html>
