--- a/index.html
+++ b/index.html
@@ -1,102 +1,141 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0//EN" "http://www.w3.org/TR/REC-html40/strict.dtd">
 <html class="grey lighten-3">
-	<head>
-		<meta charset="utf-8">
-		<link href="css/style.css" type="text/css" rel="stylesheet">
-		<!--Import Google Icon Font-->
 
-		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-		<!--Import materialize.css-->
+<head>
+	<meta charset="utf-8">
+	<link href="css/style.css" type="text/css" rel="stylesheet">
+	<!--Import Google Icon Font-->
 
-		<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<!--Import materialize.css-->
 
-		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
 
-		<!--Let browser know website is optimized for mobile-->
-		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-	</head>
+	<!--Let browser know website is optimized for mobile-->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-	<body>
+</head>
 
-		<!--Import jQuery before materialize.js-->
-		<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<body>
 
-		<script type="text/javascript" src="js/materialize.min.js"></script>
+	<nav>
 
-		<script src="js/map.js" type="text/javascript"></script>
+		<div class="nav-wrapper teal darken-3">
 
-		<nav>
+			<a href="#" class="brand-logo"><i class="material-icons icon-white" style="font-size: 50px">local_movies</i></a>
 
-			<div class="nav-wrapper teal darken-3">
+			<ul id="nav-mobile" class="right hide-on-med-and-down">
 
-				<a href="#" class="brand-logo"><i class="material-icons icon-white" style="font-size: 50px">local_movies</i></a>
+				<li><a href="movieList.html"><i class="material-icons icon-white" style="font-size: 40px">format_list_bulleted</i></a></li>
 
-				<ul id="nav-mobile" class="right hide-on-med-and-down">
+				<li><a href="index.hmtml"><i class="material-icons icon-white" style="font-size: 40px">map</i></a></li>
 
-					<li><a href="#"><i class="material-icons icon-white" style="font-size: 40px">format_list_bulleted</i></a></li>
+				<li><a href="home.html"><i class="material-icons icon-white" style="font-size: 40px">home</i></a></li>
 
-					<li><a href="#"><i class="material-icons icon-white" style="font-size: 40px">map</i></a></li>
+				<li><a href="account.html"><i class="material-icons icon-white" style="font-size: 40px">account_circle</i></a></li>
 
-					<li><a href="#"><i class="material-icons icon-white" style="font-size: 40px">home</i></a></li>
+			</ul>
 
-					<li><a href="#"><i class="material-icons icon-white" style="font-size: 40px">account_circle</i></a></li>
+		</div>
 
-				</ul>
+	</nav>
 
-			</div>
+	<div id="div_main_grid" class="grid">
 
-		</nav>
+		<div id="div_main_info" class="row" style="height: 100%">
 
-		<div id="div_main_grid" class="grid">
+			<div id="div_card_box" class="col s3">
 
-			<div id="div_main_info" class="row" style="height: 100%">
-
-				<div id="div_card_box" class="col s3">
-
-					<div class="row">
+				<div class="row">
 
 					<div id="div_card_column" class="col s12">
 
-					  <div class="card hoverable">
+						<div class="card hoverable">
 
-						<div class="card-image">
+							<div class="card-image">
 
-						  	<img src="media/logoDinosaurio.jpg
-						  ">
-						  	<span class="card-title">Cines Dinosaurio</span>
+								<img src="media/logoDinosaurio.jpg">
+								<span class="card-title">Cines Dinosaurio</span>
+
+							</div>
+
+							<div class="card-content">
+
+								<p> Ubicado en Rodriguez del Busto, ofrece muy buenas comodidades y una alta resolucion de imagen por un precio accesible.
+								</p>
+
+							</div>
+
+							<div class="card-action">
+
+								<a href="www.cinesdinomall.com.ar">Pagina Web</a>
+
+							</div>
 
 						</div>
 
-						<div class="card-content">
-
-						  <p> Ubicado en Rodriguez del Busto, ofrece muy buenas comodidades y una alta resolucion de imagen por un precio accesible.
-						  </p>
-
-						</div>
-
-						<div class="card-action">
-
-						    <a href="www.cinesdinomall.com.ar">Pagina Web</a>
-
-						</div>
-
-					  </div>
-					  <a class="waves-effect waves-light btn" onclick="createInfoCard()">create card</a>
 					</div>
 
-				  </div>
-
 				</div>
 
-				<div id="div_main_map" class="col s9">
+				<a class="waves-effect waves-light btn" onclick="mygoogle()">create card</a>
 
-					<div id="map"></div>				
-					<script src="https://maps.googleapis.com/maps/api/js?callback=myMap"></script>
+			</div>
 
-				</div>
+			<div id="div_main_map" class="col s9">
+
+				<div id="map"></div>
+
+
+			</div>
 
 		</div>
-		<script src="js/cards.js" type="text/javascript"></script>
-	</body>
+	</div>
+
+
+</body>
+<!--Import jQuery before materialize.js-->
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+
+<script type="text/javascript" src="js/materialize.min.js"></script>
+<script src="js/map.js" type="text/javascript"></script>
+<script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?callback=myMap"></script>
+<script type="text/javascript">
+// Initialize Firebase
+var config = {
+	apiKey: "AIzaSyAK-3br_mavmuruZrryh-Vidm0PPKqLxbI",
+	authDomain: "easycartelera.firebaseapp.com",
+	databaseURL: "https://easycartelera.firebaseio.com",
+	projectId: "easycartelera",
+	storageBucket: "easycartelera.appspot.com",
+	messagingSenderId: "703501126646"
+};
+firebase.initializeApp(config);
+</script>
+<script src="js/cards.js" type="text/javascript"></script>
+<script type="text/javascript">
+function mygoogle() {
+	var provider = new firebase.auth.GoogleAuthProvider();
+	firebase.auth().signInWithPopup(provider).then(function(result) {
+		// This gives you a Google Access Token. You can use it to access the Google API.
+		var token = result.credential.accessToken;
+		// The signed-in user info.
+		var user = result.user;
+		// ...
+	}).catch(function(error) {
+		// Handle Errors here.
+		var errorCode = error.code;
+		var errorMessage = error.message;
+		// The email of the user's account used.
+		var email = error.email;
+		// The firebase.auth.AuthCredential type that was used.
+		var credential = error.credential;
+		// ...
+	});
+}
+</script>
+
 </html>
