Hot save, log in

--- a/home.html
+++ b/home.html
@@ -12,6 +12,9 @@
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+  <title>EasyCartelera</title>
+	<link rel="shortcut icon" href="media/movie.png">
+
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -21,7 +24,7 @@
 
     <div class="nav-wrapper teal darken-3">
 
-      <a href="#" class="brand-logo"><i class="material-icons icon-white" style="font-size: 50px">local_movies</i></a>
+      <a href="home.html" class="brand-logo"><i class="material-icons icon-white" style="font-size: 50px">local_movies</i></a>
 
       <ul id="nav-mobile" class="right hide-on-med-and-down">
 
@@ -41,7 +44,9 @@
   <div id="div_main_grid" class="grid">
 
     <div id="div_main_info" class="row" style="height: 100%">
-
+      <!--<a href="" download>
+        <img src="/images/downloadbutton.jpg">
+      </a>-->
     </div>
   </div>
 </body>
