--- a/account.html
+++ b/account.html
@@ -12,6 +12,9 @@
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+  <title>EasyCartelera</title>
+  <link rel="shortcut icon" href="media/movie.png">
+
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -21,7 +24,7 @@
 
     <div class="nav-wrapper teal darken-3">
 
-      <a href="#" class="brand-logo"><i class="material-icons icon-white" style="font-size: 50px">local_movies</i></a>
+      <a href="home.html" class="brand-logo"><i class="material-icons icon-white" style="font-size: 50px">local_movies</i></a>
 
       <ul id="nav-mobile" class="right hide-on-med-and-down">
 
@@ -58,6 +61,23 @@
                 <label for="password">Password</label>
               </div>
             </div>
+            <div class="row">
+              <div class="col s4">
+                <a class="waves-effect waves-light btn black-text grey lighten-4" onclick="">Sign in</a>
+              </div>
+            </div>
+            <div class="divider" style="margin-bottom: 3%;"></div>
+            <div class="row">
+              <div class="chip hoverable" onclick="mygoogle()">
+                <img src="http://ssl.gstatic.com/images/branding/google_plus/2x/gplus_icon_flush_60dp.png
+" alt="Contact Person">
+                Google +
+              </div>
+              <div class="chip hoverable" onclick="mygoogle()">
+                <img src="https://assets-cdn.github.com/favicon.ico" alt="Contact Person">
+                GitHub
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -66,4 +86,7 @@
   <!--Import jQuery before materialize.js-->
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="js/materialize.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
+  <script src="js/firebase.js" type="text/javascript"></script>
   </html>
+}
