--- a/account.html
+++ b/account.html
@@ -4,42 +4,26 @@
   <meta charset="utf-8">
   <link href="css/style.css" type="text/css" rel="stylesheet">
   <!--Import Google Icon Font-->
-
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--Import materialize.css-->
-
   <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
-
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
   <title>EasyCartelera</title>
   <link rel="shortcut icon" href="media/movie.png">
-
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
 </head>
 <body>
   <nav>
-
     <div class="nav-wrapper teal darken-3">
-
       <a href="home.html" class="brand-logo"><i class="material-icons icon-white" style="font-size: 50px">local_movies</i></a>
-
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-
         <li><a href="movieList.html"><i class="material-icons icon-white" style="font-size: 40px">format_list_bulleted</i></a></li>
-
         <li><a href="index.html"><i class="material-icons icon-white" style="font-size: 40px">map</i></a></li>
-
         <li><a href="home.html"><i class="material-icons icon-white" style="font-size: 40px">home</i></a></li>
-
-        <li><a href="account.html"><i class="material-icons icon-white" style="font-size: 40px">account_circle</i></a></li>
-
+        <li><a href="#"><i class="material-icons icon-white" style="font-size: 40px">account_circle</i></a></li>
       </ul>
-
     </div>
-
   </nav>
   <div id="div_main_grid" class="grid">
     <div id="div_main_info" class="row" style="height: 100%">
@@ -70,10 +54,10 @@
             <div class="row">
               <div class="chip hoverable" onclick="mygoogle()">
                 <img src="http://ssl.gstatic.com/images/branding/google_plus/2x/gplus_icon_flush_60dp.png
-" alt="Contact Person">
+                " alt="Contact Person">
                 Google +
               </div>
-              <div class="chip hoverable" onclick="mygoogle()">
+              <div class="chip hoverable" href="https://github.com/login/oauth/authorize?scope=user:email&client_id=<%= client_id %>">
                 <img src="https://assets-cdn.github.com/favicon.ico" alt="Contact Person">
                 GitHub
               </div>
@@ -89,4 +73,3 @@
   <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
   <script src="js/firebase.js" type="text/javascript"></script>
   </html>
-}
