--- a/index.html
+++ b/index.html
@@ -1,110 +1,61 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0//EN" "http://www.w3.org/TR/REC-html40/strict.dtd">
 <html class="grey lighten-3">
-
 <head>
 	<meta charset="utf-8">
 	<link href="css/style.css" type="text/css" rel="stylesheet">
 	<!--Import Google Icon Font-->
-
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<!--Import materialize.css-->
-
 	<link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
-
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
 	<title>EasyCartelera</title>
 	<link rel="shortcut icon" href="media/movie.png">
-
 	<!--Let browser know website is optimized for mobile-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
 </head>
-
 <body>
-
 	<nav>
-
 		<div class="nav-wrapper teal darken-3">
-
 			<a href="home.html" class="brand-logo"><i class="material-icons icon-white" style="font-size: 50px">local_movies</i></a>
-
 			<ul id="nav-mobile" class="right hide-on-med-and-down">
-
 				<li><a href="movieList.html"><i class="material-icons icon-white" style="font-size: 40px">format_list_bulleted</i></a></li>
-
-				<li><a href="index.hmtml"><i class="material-icons icon-white" style="font-size: 40px">map</i></a></li>
-
+				<li><a href="#"><i class="material-icons icon-white" style="font-size: 40px">map</i></a></li>
 				<li><a href="home.html"><i class="material-icons icon-white" style="font-size: 40px">home</i></a></li>
-
 				<li><a href="account.html"><i class="material-icons icon-white" style="font-size: 40px">account_circle</i></a></li>
-
 			</ul>
-
 		</div>
-
 	</nav>
-
 	<div id="div_main_grid" class="grid">
-
 		<div id="div_main_info" class="row" style="height: 100%">
-
 			<div id="div_card_box" class="col s3">
-
 				<div class="row">
-
 					<div id="div_card_column" class="col s12">
-
 						<div class="card hoverable">
-
 							<div class="card-image">
-
 								<img src="media/logoDinosaurio.jpg">
 								<span class="card-title">Cines Dinosaurio</span>
-
 							</div>
-
 							<div class="card-content">
-
 								<p> Ubicado en Rodriguez del Busto, ofrece muy buenas comodidades y una alta resolucion de imagen por un precio accesible.
 								</p>
-
 							</div>
-
 							<div class="card-action">
-
 								<a href="www.cinesdinomall.com.ar">Pagina Web</a>
-
 							</div>
-
 						</div>
-
 					</div>
-
 				</div>
-
 				<a class="waves-effect waves-light btn" onclick="mygoogle()">create card</a>
-
 			</div>
-
 			<div id="div_main_map" class="col s9">
-
 				<div id="map"></div>
-
-
 			</div>
-
 		</div>
 	</div>
-
-
 </body>
 <!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-
 <script type="text/javascript" src="js/materialize.min.js"></script>
 <script src="js/map.js" type="text/javascript"></script>
 <script src="https://maps.googleapis.com/maps/api/js?callback=myMap"></script>
-
-
 </html>
