--- a/movieList.html
+++ b/movieList.html
@@ -4,47 +4,29 @@
   <meta charset="utf-8">
   <link href="css/style.css" type="text/css" rel="stylesheet">
   <!--Import Google Icon Font-->
-
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--Import materialize.css-->
-
   <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
-
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
   <title>EasyCartelera</title>
-	<link rel="shortcut icon" href="media/movie.png">
-
+  <link rel="shortcut icon" href="media/movie.png">
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
 </head>
 <body>
   <nav>
-
     <div class="nav-wrapper teal darken-3">
-
       <a href="home.html" class="brand-logo"><i class="material-icons icon-white" style="font-size: 50px">local_movies</i></a>
-
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-
-        <li><a href="movieList.html"><i class="material-icons icon-white" style="font-size: 40px">format_list_bulleted</i></a></li>
-
+        <li><a href="#"><i class="material-icons icon-white" style="font-size: 40px">format_list_bulleted</i></a></li>
         <li><a href="index.html"><i class="material-icons icon-white" style="font-size: 40px">map</i></a></li>
-
         <li><a href="home.html"><i class="material-icons icon-white" style="font-size: 40px">home</i></a></li>
-
         <li><a href="account.html"><i class="material-icons icon-white" style="font-size: 40px">account_circle</i></a></li>
-
       </ul>
-
     </div>
-
   </nav>
   <div id="div_main_grid" class="grid">
-
     <div id="div_main_info" class="row" style="height: 100%">
-
     </div>
   </div>
 </body>
