--- a/account.html
+++ b/account.html
@@ -27,7 +27,7 @@
   </nav>
   <div id="div_main_grid" class="grid">
     <div id="div_main_info" class="row" style="height: 100%">
-      <div class="col s12" style="height: 10%; margin-left: 30%; margin-right: 30%;">
+      <div class="col s12">
         <div class="card white">
           <div class="card-content" style="height:100%">
             <span class="card-title">Sign In</span>
@@ -46,9 +46,9 @@
               </div>
             </div>
             <div class="row">
-              <div class="col s4">
+              <!--<div class="col s4">-->
                 <a class="waves-effect waves-light btn black-text grey lighten-4" onclick="">Sign in</a>
-              </div>
+              <!--</div>-->
             </div>
             <div class="divider" style="margin-bottom: 3%;"></div>
             <div class="row">
