--- a/home.html
+++ b/home.html
@@ -109,4 +109,6 @@ $('.carousel').carousel();
 */
 $('.carousel.carousel-slider').carousel({fullWidth: true});
 </script>
+<script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
+<script src="js/firebase.js" type="text/javascript"></script>
 </html>
