--- a/index.html
+++ b/index.html
@@ -58,4 +58,6 @@
 <script type="text/javascript" src="js/materialize.min.js"></script>
 <script src="js/map.js" type="text/javascript"></script>
 <script src="https://maps.googleapis.com/maps/api/js?callback=myMap"></script>
+<script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
+<script src="js/firebase.js" type="text/javascript"></script>
 </html>
