Login Remastered (Again), hot save

--- a/movieList.html
+++ b/movieList.html
@@ -18,10 +18,10 @@
     <div class="nav-wrapper teal darken-3">
       <a href="home.html" class="brand-logo"><i class="material-icons icon-white" style="font-size: 50px">local_movies</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="#"><i class="material-icons icon-white" style="font-size: 40px">format_list_bulleted</i></a></li>
-        <li><a href="index.html"><i class="material-icons icon-white" style="font-size: 40px">map</i></a></li>
-        <li><a href="home.html"><i class="material-icons icon-white" style="font-size: 40px">home</i></a></li>
-        <li><a href="account.html"><i class="material-icons icon-white" style="font-size: 40px">account_circle</i></a></li>
+        <li id="li_movie_list"><a href="#"><i class="material-icons icon-white" style="font-size: 40px">format_list_bulleted</i></a></li>
+        <li id="li_map"><a href="index.html"><i class="material-icons icon-white" style="font-size: 40px">map</i></a></li>
+        <li id="li_home"><a href="home.html"><i class="material-icons icon-white" style="font-size: 40px">home</i></a></li>
+        <li id="li_account"><a href="account.html"><i class="material-icons icon-white" style="font-size: 40px">account_circle</i></a></li>
       </ul>
     </div>
   </nav>
