--- a/index.html
+++ b/index.html
@@ -15,38 +15,26 @@
 </head>
 <body>
 	<nav>
-		<div class="nav-wrapper teal darken-3">
-			<a href="home.html" class="brand-logo"><i class="material-icons icon-white" style="font-size: 50px">local_movies</i></a>
-			<ul id="nav-mobile" class="right hide-on-med-and-down">
-				<li><a href="movieList.html"><i class="material-icons icon-white" style="font-size: 40px">format_list_bulleted</i></a></li>
-				<li><a href="#"><i class="material-icons icon-white" style="font-size: 40px">map</i></a></li>
-				<li><a href="home.html"><i class="material-icons icon-white" style="font-size: 40px">home</i></a></li>
-				<li><a href="account.html"><i class="material-icons icon-white" style="font-size: 40px">account_circle</i></a></li>
-			</ul>
-		</div>
-	</nav>
+    <div class="nav-wrapper teal darken-3">
+      <a href="home.html" class="brand-logo"><i class="material-icons icon-white" style="font-size: 50px">local_movies</i></a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li id="li_movie_list"><a href="movieList.html"><i class="material-icons icon-white" style="font-size: 40px">format_list_bulleted</i></a></li>
+        <li id="li_map"><a href="#"><i class="material-icons icon-white" style="font-size: 40px">map</i></a></li>
+        <li id="li_home"><a href="home.html"><i class="material-icons icon-white" style="font-size: 40px">home</i></a></li>
+        <li id="li_account"><a href="account.html"><i class="material-icons icon-white" style="font-size: 40px">account_circle</i></a></li>
+      </ul>
+    </div>
+  </nav>
 	<div id="div_main_grid" class="grid">
 		<div id="div_main_info" class="row" style="height: 100%">
 			<div id="div_card_box" class="col s3">
 				<div class="row">
 					<div id="div_card_column" class="col s12">
-						<div class="card hoverable">
-							<div class="card-image">
-								<img src="media/logoDinosaurio.jpg">
-								<span class="card-title">Cines Dinosaurio</span>
-							</div>
-							<div class="card-content">
-								<p> Ubicado en Rodriguez del Busto, ofrece muy buenas comodidades y una alta resolucion de imagen por un precio accesible.
-								</p>
-							</div>
-							<div class="card-action">
-								<a href="www.cinesdinomall.com.ar">Pagina Web</a>
-							</div>
-						</div>
+						<!-- Cards will dinamically appear here -->
 					</div>
 				</div>
-				<a class="waves-effect waves-light btn" onclick="mygoogle()">create card</a>
 			</div>
+			<!--<a class="waves-effect waves-light btn" onclick="mygoogle()">create card</a>-->
 			<div id="div_main_map" class="col s9">
 				<div id="map"></div>
 			</div>
