Various Firebase fixes

--- a/html-elements/profile.html
+++ b/html-elements/profile.html
@@ -1,16 +1,62 @@
-<div class="col s12">
-  <div class="card white">
-    <div class="card-content" style="height:100%">
-      <span class="card-title">Profile Information</span>
-    </div>
-    <div class="card-action">
-      <div class="row">
-        <div class="input-field col s12">
-          <input id="user" type="text" class="validate">
-          <label for="user">Profile</label>
-        </div>
+  <div class="col s12 m8 offset-m2">
+    <div class="card white">
+      <div class="card-content" style="height:100%">
+        <span class="card-title">Profile Information</span>
       </div>
-
+      <div class="card-action">
+        <div class="row">
+          <div class="input-field col s5">
+            <input disabled value=" " type="text" id="name" class="validate">
+            <label for="input_name">Name</label>
+          </div>
+          <div class="input-field col s5">
+            <input disabled value="" type="text" id="surname" class="validate">
+            <label for="input_surname">Surname</label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="input-field col s3">
+            <input disabled value="" type="text" id="age" class="validate">
+            <label for="input_age">Age</label>
+          </div>
+          <div class="input-field col s6">
+            <input disabled value="" type="text" id="country" class="validate">
+            <label for="country">Country</label>
+          </div>
+        </div>
       </div>
     </div>
   </div>
+
+<!--<div class="valign-wrapper" style="width:100%;height:100%;position: absolute;">
+<div class="valign" style="width:100%;">
+<div class="container">
+<div class="row">
+<div class="col s12 m6 offset-m3">
+<div class="card">
+<div class="card-content">
+<span class="card-title black-text">Sign In</span>
+<form>
+<div class="row">
+<div class="input-field col s12">
+<input placeholder="Placeholder" id="firstname" type="text" class="validate">
+<label for="firstname" class="active">First Name</label>
+</div>
+</div>
+<div class="row">
+<div class="input-field col s12">
+<input placeholder="Placeholder" id="lastname" type="text" class="validate">
+<label for="lastname" class="active">Last Name</label>
+</div>
+</div>
+</form>
+</div>
+<div class="card-action">
+<input type="submit" class="btn" value="Sign In">
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>-->
