--- a/account.html
+++ b/account.html
@@ -39,4 +39,5 @@
   <script type="text/javascript" src="js/materialize.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
   <script src="js/firebase.js" type="text/javascript"></script>
+  <script src="js/account.js" type="text/javascript"></script>
   </html>
