--- a/html-elements/sign-in-form.html
+++ b/html-elements/sign-in-form.html
@@ -1,4 +1,4 @@
-<div class="col s12">
+<div class="col s12 m8 offset-m2">
   <div class="card white">
     <div class="card-content" style="height:100%">
       <span class="card-title">Sign In</span>
