--- a/index.html
+++ b/index.html
@@ -14,28 +14,33 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
-	<nav>
+	<ul id="account-dropdown" class="dropdown-content">
+    <li><a href="account.html">Profile</a></li>
+    <li><a href="#!" onclick="signOut()">Sign out</a></li>
+  </ul>
+  <nav>
     <div class="nav-wrapper teal darken-3">
       <a href="home.html" class="brand-logo"><i class="material-icons icon-white" style="font-size: 50px">local_movies</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li id="li_movie_list"><a href="movieList.html"><i class="material-icons icon-white" style="font-size: 40px">format_list_bulleted</i></a></li>
         <li id="li_map"><a href="#"><i class="material-icons icon-white" style="font-size: 40px">map</i></a></li>
         <li id="li_home"><a href="home.html"><i class="material-icons icon-white" style="font-size: 40px">home</i></a></li>
+        <li><a class="dropdown-button" href="#" data-activates="account-dropdown">Account<i class="material-icons right">arrow_drop_down</i></a></li>
         <li id="li_account"><a href="account.html"><i class="material-icons icon-white" style="font-size: 40px">account_circle</i></a></li>
       </ul>
     </div>
   </nav>
 	<div id="div_main_grid" class="grid">
 		<div id="div_main_info" class="row" style="height: 100%">
-			<div id="div_card_box" class="col s3">
+			<div id="div_card_box" class="col s0 m4">
 				<div class="row">
-					<div id="div_card_column" class="col s12">
+					<div id="div_card_column" class="col s0 m12">
 						<!-- Cards will dinamically appear here -->
 					</div>
 				</div>
 			</div>
 			<!--<a class="waves-effect waves-light btn" onclick="mygoogle()">create card</a>-->
-			<div id="div_main_map" class="col s9">
+			<div id="div_main_map" class="col s12 m8">
 				<div id="map"></div>
 			</div>
 		</div>
@@ -48,4 +53,5 @@
 <script src="https://maps.googleapis.com/maps/api/js?callback=myMap"></script>
 <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
 <script src="js/firebase.js" type="text/javascript"></script>
+<script src="js/index.js" type="text/javascript"></script>
 </html>
