Setting a users information wont work due to database rules

--- a/html-elements/profile.html
+++ b/html-elements/profile.html
@@ -1,32 +1,61 @@
-  <div class="col s12 m8 offset-m2">
-    <div class="card white">
-      <div class="card-content" style="height:100%">
-        <span class="card-title">Profile Information</span>
+<div class="col s12 m8 offset-m2">
+  <div class="card white">
+    <div class="card-content" style="height:100%">
+      <span class="card-title">Profile Information</span>
+    </div>
+    <div class="card-action">
+      <div class="row">
+        <div class="input-field col s6">
+          <input type="text" id="input_name" class="validate">
+          <label for="input_name">Name</label>
+        </div>
+        <div class="input-field col s6">
+          <input type="text" id="input_surname" class="validate">
+          <label for="input_surname">Surname</label>
+        </div>
       </div>
-      <div class="card-action">
-        <div class="row">
-          <div class="input-field col s5">
-            <input disabled value=" " type="text" id="name" class="validate">
-            <label for="input_name">Name</label>
-          </div>
-          <div class="input-field col s5">
-            <input disabled value="" type="text" id="surname" class="validate">
-            <label for="input_surname">Surname</label>
-          </div>
+      <div class="row">
+        <div class="input-field col s2">
+          <input type="text" id="input_age" class="validate">
+          <label for="input_age">Age</label>
         </div>
-        <div class="row">
-          <div class="input-field col s3">
-            <input disabled value="" type="text" id="age" class="validate">
-            <label for="input_age">Age</label>
-          </div>
-          <div class="input-field col s6">
-            <input disabled value="" type="text" id="country" class="validate">
-            <label for="country">Country</label>
-          </div>
+        <div class="input-field col s3">
+          <input type="text" id="input_gender" class="validate">
+          <label for="input_gender">Gender</label>
         </div>
+        <div class="input-field col s3">
+          <input type="text" id="input_phone" class="validate">
+          <label for="input_phone">Phone</label>
+        </div>
+        <div class="input-field col s4">
+          <input type="text" id="input_country" class="validate">
+          <label for="input_country">Country</label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="input-field col s3">
+          <input type="text" id="input_province" class="validate">
+          <label for="input_province">Province/State</label>
+        </div>
+        <div class="input-field col s3">
+          <input type="text" id="input_street" class="validate">
+          <label for="input_street">Street</label>
+        </div>
+        <div class="input-field col s2">
+          <input type="text" id="input_number" class="validate">
+          <label for="input_number">Street number</label>
+        </div>
+        <div class="input-field col s4">
+          <input type="text" id="input_liking" class="validate">
+          <label for="input_liking">Likings</label>
+        </div>
+      </div>
+      <div class="row">
+        <a class="waves-effect waves-light btn" onclick="getDataAndSaveUserData()">Save</a>
       </div>
     </div>
   </div>
+</div>
 
 <!--<div class="valign-wrapper" style="width:100%;height:100%;position: absolute;">
 <div class="valign" style="width:100%;">
