--- a/account.html
+++ b/account.html
@@ -12,6 +12,9 @@
   <link rel="shortcut icon" href="media/movie.png">
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="expires" content="0">
+  <meta http-equiv="Cache-Control" content="no-cache">
+  <meta http-equiv="Pragma" CONTENT="no-cache">
 </head>
 <body>
   <ul id="account-dropdown" class="dropdown-content">
@@ -33,11 +36,12 @@
   <div id="div_main_grid" class="grid">
     <div id="div_main_info" class="row" style="height: 100%">
     </div>
-  </body>
-  <!--Import jQuery before materialize.js-->
-  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script type="text/javascript" src="js/materialize.min.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
-  <script src="js/firebase.js" type="text/javascript"></script>
-  <script src="js/account.js" type="text/javascript"></script>
-  </html>
+  </div>
+</body>
+<!--Import jQuery before materialize.js-->
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script>
+<script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
+<script src="js/firebase.js" type="text/javascript"></script>
+<script src="js/account.js" type="text/javascript"></script>
+</html>
