Hot save another time. Get cinemas near device completed

--- a/account.html
+++ b/account.html
@@ -11,10 +11,10 @@
   <title>EasyCartelera</title>
   <link rel="shortcut icon" href="media/movie.png">
   <!--Let browser know website is optimized for mobile-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="expires" content="0">
   <meta http-equiv="Cache-Control" content="no-cache">
-  <meta http-equiv="Pragma" CONTENT="no-cache">
+  <meta http-equiv="Pragma" CONTENT="no-cache"> -->
 </head>
 <body>
   <ul id="account-dropdown" class="dropdown-content">
