--- a/databaseForms.html
+++ b/databaseForms.html
@@ -13,6 +13,9 @@
       <td><input id="input_desc" type="text"></td>
     </tr>
     <tr>
+      <td><input id="input_direc" type="text"></td>
+    </tr>
+    <tr>
       <td><input id="input_lat" type="text"></td>
     </tr>
     <tr>
@@ -25,9 +28,11 @@
       <td><button type="button" name="button" onclick="pushNewCinema()">pushNewCinema</button></td>
     </tr>
   </table>
+  <div id="map"></div>
 </body>
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCndUePDugeHEt2kQ2vA4ptMYJpiUeGqXE&libraries=places"></script>
 <script src="js/firebase.js" type="text/javascript"></script>
 <script src="js/forms.js" type="text/javascript"></script>
 </html>
