--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="js/materialize.min.js"></script>
 <script src="js/map.js" type="text/javascript"></script>
-<script src="https://maps.googleapis.com/maps/api/js?callback=myMap"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIUQATrNl5GqOq-CB2oQoquSPrXC0tElA&callback=myMap" async defer></script>
 <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
 <script src="js/firebase.js" type="text/javascript"></script>
 <script src="js/index.js" type="text/javascript"></script>
