Last save before pulling to master, Map is working, Movie list is working, login is working

--- a/movieList.html
+++ b/movieList.html
@@ -30,28 +30,33 @@
       </ul>
     </div>
   </nav>
-  <div class="parallax-container">
-    <div class="parallax"><img src="/media/batman.jpg"></div>
-  </div>
-  <div class="section teal darken-1">
-    <div class="row container">
-      <h2 class="header white-text">The Dark Knight</h2>
-      <p class="grey-text text-darken-3 lighten-3"></p>
+  <div id="preloader" class="row">
+    <div class="col s6 offset-s6">
+      <br>
+      <br>
+      <div class="preloader-wrapper small active">
+        <div class="spinner-layer spinner-green-only">
+          <div class="circle-clipper left">
+            <div class="circle"></div>
+          </div><div class="gap-patch">
+            <div class="circle"></div>
+          </div><div class="circle-clipper right">
+            <div class="circle"></div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="parallax-container">
-    <div class="parallax"><img src="/media/pacificrim.jpg"></div>
+
+  <!--<a id="topBtn" class="btn-floating btn-large waves-effect waves-light teal darken-3 topBtn" onclick="topFunction()"><i class="material-icons">add</i></a>-->
+  <!--<button class="topBtn" onclick="topFunction()" id="topBtn" title="To top">Top</button>-->
+  <div id="parallaxes">
   </div>
-  <div class="section teal darken-1">
-    <div class="row container">
-      <h2 class="header white-text">Pacific Rim</h2>
-      <p class="grey-text text-darken-3 lighten-3"></p>
-    </div>
-  </div>
-  <div id="div_main_grid" class="grid">
-    <div id="div_main_info" class="row" style="height: 100%">
-    </div>
-  </div>
+  <!--<a href="#" class="scrollToTop">Scroll To Top</a>-->
+  <!--<div id="div_main_grid" class="grid">
+  <div id="div_main_info" class="row" style="height: 100%">
+</div>
+</div>-->
 </body>
 <!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
