--- a/index.html
+++ b/index.html
@@ -15,26 +15,43 @@
 </head>
 <body>
 	<ul id="account-dropdown" class="dropdown-content">
-    <li><a href="account.html">Profile</a></li>
-    <li><a href="#!" onclick="signOut()">Sign out</a></li>
-  </ul>
-  <nav>
-    <div class="nav-wrapper teal darken-3">
-      <a href="home.html" class="brand-logo"><i class="material-icons icon-white" style="font-size: 50px">local_movies</i></a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li id="li_movie_list"><a href="movieList.html"><i class="material-icons icon-white" style="font-size: 40px">format_list_bulleted</i></a></li>
-        <li id="li_map"><a href="#"><i class="material-icons icon-white" style="font-size: 40px">map</i></a></li>
-        <li id="li_home"><a href="home.html"><i class="material-icons icon-white" style="font-size: 40px">home</i></a></li>
-        <li><a class="dropdown-button" href="#" data-activates="account-dropdown">Account<i class="material-icons right">arrow_drop_down</i></a></li>
-        <li id="li_account"><a href="account.html"><i class="material-icons icon-white" style="font-size: 40px">account_circle</i></a></li>
-      </ul>
-    </div>
-  </nav>
+		<li><a href="account.html">Profile</a></li>
+		<li><a href="#!" onclick="signOut()">Sign out</a></li>
+	</ul>
+	<nav>
+		<div class="nav-wrapper teal darken-3">
+			<a href="home.html" class="brand-logo"><i class="material-icons icon-white" style="font-size: 50px">local_movies</i></a>
+			<ul id="nav-mobile" class="right hide-on-med-and-down">
+				<li id="li_movie_list"><a href="movieList.html"><i class="material-icons icon-white" style="font-size: 40px">format_list_bulleted</i></a></li>
+				<li id="li_map"><a href="#"><i class="material-icons icon-white" style="font-size: 40px">map</i></a></li>
+				<li id="li_home"><a href="home.html"><i class="material-icons icon-white" style="font-size: 40px">home</i></a></li>
+				<li><a class="dropdown-button" href="#" data-activates="account-dropdown">Account<i class="material-icons right">arrow_drop_down</i></a></li>
+				<li id="li_account"><a href="account.html"><i class="material-icons icon-white" style="font-size: 40px">account_circle</i></a></li>
+			</ul>
+		</div>
+	</nav>
 	<div id="div_main_grid" class="grid">
 		<div id="div_main_info" class="row" style="height: 100%">
 			<div id="div_card_box" class="col s0 m4">
 				<div class="row">
 					<div id="div_card_column" class="col s0 m12">
+						<!--<div id="preloader" class="row">
+							<div class="col s6 offset-s6">
+								<br>
+								<br>
+								<div class="preloader-wrapper small active">
+									<div class="spinner-layer spinner-green-only">
+										<div class="circle-clipper left">
+											<div class="circle"></div>
+										</div><div class="gap-patch">
+											<div class="circle"></div>
+										</div><div class="circle-clipper right">
+											<div class="circle"></div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>-->
 						<!-- Cards will dinamically appear here -->
 					</div>
 				</div>
