Hot save, sidenav almost completed

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 		<li><a href="#!" onclick="signOut()">Sign out</a></li>
 	</ul>
 	<nav>
-		<div class="nav-wrapper teal darken-3">
+		<div id="nav-bar" class="nav-wrapper teal darken-3">
 			<a href="home.html" class="brand-logo"><i class="material-icons icon-white" style="font-size: 50px">local_movies</i></a>
+			<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 			<ul id="nav-mobile" class="right hide-on-med-and-down">
 				<li id="li_movie_list"><a href="movieList.html"><i class="material-icons icon-white" style="font-size: 40px">format_list_bulleted</i></a></li>
 				<li id="li_map"><a href="#"><i class="material-icons icon-white" style="font-size: 40px">map</i></a></li>
@@ -36,32 +37,32 @@
 				<div class="row">
 					<div id="div_card_column" class="col s0 m12">
 						<!--<div id="preloader" class="row">
-							<div class="col s6 offset-s6">
-								<br>
-								<br>
-								<div class="preloader-wrapper small active">
-									<div class="spinner-layer spinner-green-only">
-										<div class="circle-clipper left">
-											<div class="circle"></div>
-										</div><div class="gap-patch">
-											<div class="circle"></div>
-										</div><div class="circle-clipper right">
-											<div class="circle"></div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>-->
-						<!-- Cards will dinamically appear here -->
-					</div>
-				</div>
-			</div>
-			<!--<a class="waves-effect waves-light btn" onclick="mygoogle()">create card</a>-->
-			<div id="div_main_map" class="col s12 m8">
-				<div id="map"></div>
+						<div class="col s6 offset-s6">
+						<br>
+						<br>
+						<div class="preloader-wrapper small active">
+						<div class="spinner-layer spinner-green-only">
+						<div class="circle-clipper left">
+						<div class="circle"></div>
+					</div><div class="gap-patch">
+					<div class="circle"></div>
+				</div><div class="circle-clipper right">
+				<div class="circle"></div>
 			</div>
 		</div>
 	</div>
+</div>
+</div>-->
+<!-- Cards will dinamically appear here -->
+</div>
+</div>
+</div>
+<!--<a class="waves-effect waves-light btn" onclick="mygoogle()">create card</a>-->
+<div id="div_main_map" class="col s12 m8">
+	<div id="map"></div>
+</div>
+</div>
+</div>
 </body>
 <!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
