--- a/home.html
+++ b/home.html
@@ -19,25 +19,26 @@
     <li><a href="#!" onclick="signOut()">Sign out</a></li>
   </ul>
   <nav>
-    <div class="nav-wrapper teal darken-3">
-      <a href="home.html" class="brand-logo"><i class="material-icons icon-white" style="font-size: 50px">local_movies</i></a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li id="li_movie_list"><a href="movieList.html"><i class="material-icons icon-white" style="font-size: 40px">format_list_bulleted</i></a></li>
-        <li id="li_map"><a href="index.html"><i class="material-icons icon-white" style="font-size: 40px">map</i></a></li>
-        <li id="li_home"><a href="#"><i class="material-icons icon-white" style="font-size: 40px">home</i></a></li>
-        <li><a class="dropdown-button" href="#" data-activates="account-dropdown">Account<i class="material-icons right">arrow_drop_down</i></a></li>
-        <li id="li_account"><a href="account.html"><i class="material-icons icon-white" style="font-size: 40px">account_circle</i></a></li>
-      </ul>
-    </div>
-  </nav>
+		<div id="nav-bar" class="nav-wrapper teal darken-3">
+			<a href="home.html" class="brand-logo"><i class="material-icons icon-white" style="font-size: 50px">local_movies</i></a>
+			<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+			<ul id="nav-mobile" class="right hide-on-med-and-down">
+				<li id="li_movie_list"><a href="movieList.html"><i class="material-icons icon-white" style="font-size: 40px">format_list_bulleted</i></a></li>
+				<li id="li_map"><a href="index.html"><i class="material-icons icon-white" style="font-size: 40px">map</i></a></li>
+				<li id="li_home"><a href="#"><i class="material-icons icon-white" style="font-size: 40px">home</i></a></li>
+				<li><a class="dropdown-button" href="#" data-activates="account-dropdown">Account<i class="material-icons right">arrow_drop_down</i></a></li>
+				<li id="li_account"><a href="account.html"><i class="material-icons icon-white" style="font-size: 40px">account_circle</i></a></li>
+			</ul>
+		</div>
+	</nav>
   <!--<div id="div_main_grid" class="row">
 
-  </div>-->
-  <!--<div class="row">
-  <div class="col s12">
-  <div class="card horizontal hoverable">
-  <div class="card-image">
-  <img src="https://lorempixel.com/100/190/nature/6">
+</div>-->
+<!--<div class="row">
+<div class="col s12">
+<div class="card horizontal hoverable">
+<div class="card-image">
+<img src="https://lorempixel.com/100/190/nature/6">
 </div>
 <div class="card-stacked">
 <div class="card-content">
