--- a/movieList.html
+++ b/movieList.html
@@ -19,8 +19,9 @@
     <li><a href="#!" onclick="signOut()">Sign out</a></li>
   </ul>
   <nav>
-    <div class="nav-wrapper teal darken-3">
+    <div id="nav-bar" class="nav-wrapper teal darken-3">
       <a href="home.html" class="brand-logo"><i class="material-icons icon-white" style="font-size: 50px">local_movies</i></a>
+      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li id="li_movie_list"><a href="#"><i class="material-icons icon-white" style="font-size: 40px">format_list_bulleted</i></a></li>
         <li id="li_map"><a href="index.html"><i class="material-icons icon-white" style="font-size: 40px">map</i></a></li>
