Hot save, UI color scheme changed, 2nd Release, created register

--- a/account.html
+++ b/account.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0//EN" "http://www.w3.org/TR/REC-html40/strict.dtd">
-<html class="grey lighten-3">
+<html style="background-color:rgb(66, 196, 172);">
 <head>
   <meta charset="utf-8">
   <link href="css/style.css" type="text/css" rel="stylesheet">
@@ -24,11 +24,11 @@
         <a href="home.html" class="brand-logo"><i class="material-icons icon-white" style="font-size: 50px">local_movies</i></a>
         <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li id="li_movie_list"><a href="#"><i class="material-icons icon-white" style="font-size: 40px">format_list_bulleted</i></a></li>
+          <li id="li_movie_list"><a href="movie_list.html"><i class="material-icons icon-white" style="font-size: 40px">format_list_bulleted</i></a></li>
           <li id="li_map"><a href="index.html"><i class="material-icons icon-white" style="font-size: 40px">map</i></a></li>
           <li id="li_home"><a href="home.html"><i class="material-icons icon-white" style="font-size: 40px">home</i></a></li>
           <li><a class="dropdown-button" href="#" data-activates="account-dropdown">Account<i class="material-icons right">arrow_drop_down</i></a></li>
-          <li id="li_account"><a href="account.html"><i class="material-icons icon-white" style="font-size: 40px">account_circle</i></a></li>
+          <li id="li_account"><a href="#"><i class="material-icons icon-white" style="font-size: 40px">account_circle</i></a></li>
         </ul>
       </div>
     </nav>
