--- a/movieList.html
+++ b/movieList.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0//EN" "http://www.w3.org/TR/REC-html40/strict.dtd">
-<html class="grey lighten-3">
+<html style="background-color:rgb(66, 196, 172);">
 <head>
   <meta charset="utf-8">
   <link href="css/style.css" type="text/css" rel="stylesheet">
