--- a/index.html
+++ b/index.html
@@ -1,38 +1,36 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0//EN" "http://www.w3.org/TR/REC-html40/strict.dtd">
-<html class="grey lighten-3">
+<html style="background-color:rgb(66, 196, 172);">
 <head>
-  <meta charset="utf-8">
-  <link href="css/style.css" type="text/css" rel="stylesheet">
-  <!--Import Google Icon Font-->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!--Import materialize.css-->
-  <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <title>EasyCartelera</title>
-  <link rel="shortcut icon" href="media/movie.png">
-  <!--Let browser know website is optimized for mobile-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta charset="utf-8">
+	<link href="css/style.css" type="text/css" rel="stylesheet">
+	<!--Import Google Icon Font-->
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<!--Import materialize.css-->
+	<link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<title>EasyCartelera</title>
+	<link rel="shortcut icon" href="media/movie.png">
+	<!--Let browser know website is optimized for mobile-->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
-  <ul id="account-dropdown" class="dropdown-content">
-    <li><a href="account.html">Profile</a></li>
-    <li><a href="#!" onclick="signOut()">Sign out</a></li>
-  </ul>
-  <div class="navbar-fixed">
-    <nav>
-      <div id="nav-bar" class="nav-wrapper">
-        <a href="home.html" class="brand-logo"><i class="material-icons icon-white" style="font-size: 50px">local_movies</i></a>
-        <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li id="li_movie_list"><a href="#"><i class="material-icons icon-white" style="font-size: 40px">format_list_bulleted</i></a></li>
-          <li id="li_map"><a href="index.html"><i class="material-icons icon-white" style="font-size: 40px">map</i></a></li>
-          <li id="li_home"><a href="home.html"><i class="material-icons icon-white" style="font-size: 40px">home</i></a></li>
-          <li><a class="dropdown-button" href="#" data-activates="account-dropdown">Account<i class="material-icons right">arrow_drop_down</i></a></li>
-          <li id="li_account"><a href="account.html"><i class="material-icons icon-white" style="font-size: 40px">account_circle</i></a></li>
-        </ul>
-      </div>
-    </nav>
-  </div>
+	<ul id="account-dropdown" class="dropdown-content">
+		<li><a href="account.html">Profile</a></li>
+		<li><a href="#!" onclick="signOut()">Sign out</a></li>
+	</ul>
+	<nav>
+		<div id="nav-bar" class="nav-wrapper">
+			<a href="home.html" class="brand-logo"><i class="material-icons icon-white" style="font-size: 50px">local_movies</i></a>
+			<a href="#" data-target="mobile-demo" class="sidenav-trigger button-collapse"><i class="material-icons">menu</i></a>
+			<ul id="nav-mobile" class="right hide-on-med-and-down">
+				<li id="li_movie_list"><a href="movieList.html"><i class="material-icons icon-white" style="font-size: 40px">format_list_bulleted</i></a></li>
+				<li id="li_map"><a href="#"><i class="material-icons icon-white" style="font-size: 40px">map</i></a></li>
+				<li id="li_home"><a href="home.html"><i class="material-icons icon-white" style="font-size: 40px">home</i></a></li>
+				<li><a class='dropdown-trigger' href='#' data-target='account-dropdown'>Account<i class="material-icons right">arrow_drop_down</i></a></li>
+				<li id="li_account"><a href="account.html"><i class="material-icons icon-white" style="font-size: 40px">account_circle</i></a></li>
+			</ul>
+		</div>
+	</nav>
 	<div id="div_main_grid" class="grid">
 		<div id="div_main_info" class="row" style="height: 100%">
 			<div id="div_card_box" class="col s0 m4">
