Hot save, I've just broken the entire thing.

--- a/html-elements/nav-bar.html
+++ b/html-elements/nav-bar.html
@@ -8,8 +8,8 @@
     <nav>
       <div id="nav-bar" class="nav-wrapper">
         <a href="home.html" class="brand-logo"><i class="material-icons icon-white" style="font-size: 50px">local_movies</i></a>
-        <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger button-collapse"><i class="material-icons">menu</i></a>
+        <ul class="right hide-on-med-and-down">
           <li id="li_movie_list"><a href="../template/movieList.html"><i class="material-icons icon-white" style="font-size: 40px">format_list_bulleted</i></a></li>
           <li id="li_map"><a href="../template/index.html"><i class="material-icons icon-white" style="font-size: 40px">map</i></a></li>
           <li id="li_home"><a href="../template/home.html"><i class="material-icons icon-white" style="font-size: 40px">home</i></a></li>
