--- a/html-elements/nav-bar.html
+++ b/html-elements/nav-bar.html
@@ -19,5 +19,18 @@
       </div>
     </nav>
   </div>
+  <ul class="sidenav" id="mobile-demo">
+    <li>
+      <div class="user-view">
+        <div class="background">
+        </div>
+        <img src="../media/office.jpg">
+      </div>
+      <a href="../template/account.html"><img class="circle" id="side-nav-user-img" src="../media/icons/account.png"></a>
+      <a><span id="side-nav-user-name" class="white-text name">Guest user</span></a>
+      <a><span id="side-nav-user-email" class="white-text email">Log in for more features</span></a>
+    </div>
+  </li>
+</ul>
 </div>
 <!--########## ()()()()()() ##########-->
