Various fixes, added Cloud Functions

--- a/html-elements/register.html
+++ b/html-elements/register.html
@@ -1,23 +1,23 @@
-<div class="col s12 m8 offset-m2">
+<div class="col s12 m8 offset-m2 l6 offset-l3">
   <div class="card white">
     <div class="card-content" style="height:100%">
-      <span class="card-title"><a onclick="$(document).load(""html-elements/sign-in-form.html"");"><i class="material-icons">arrow_back</i></a>Register</span>
+      <span class="card-title"><a onclick="displaySignInForm();"><i class="material-icons">arrow_back</i></a>Register</span>
     </div>
     <div class="card-action">
       <div class="row">
-        <div class="input-field col s5">
+        <div class="input-field col s12 m7 pull-m5 l5 pull-l7">
           <input value="" type="text" id="input_email" class="validate">
-          <label for="input_email">email</label>
+          <label for="input_email">E-mail</label>
         </div>
       </div>
       <div class="row">
-        <div class="input-field col s5">
+        <div class="input-field col s12 m7 pull-m5 l5 pull-l7">
           <input id="input_password" type="password" class="validate">
           <label for="input_password">Password</label>
         </div>
       </div>
       <div class="row">
-        <div class="input-field col s5">
+        <div class="input-field col s12 m7 pull-m5 l5 pull-l7">
           <input id="input_repeat_password" type="password" class="validate">
           <label for="input_repeat_password">Repeat password</label>
         </div>
