--- a/html-elements/sign-in-form.html
+++ b/html-elements/sign-in-form.html
@@ -29,7 +29,7 @@
           " alt="Contact Person">
           Google +
         </div>
-        <div class="chip hoverable" href="https://github.com/login/oauth/authorize?scope=user:email&client_id=<%= client_id %>">
+        <div class="chip hoverable" onclick="mygithub()">
           <img src="https://assets-cdn.github.com/favicon.ico" alt="Contact Person">
           GitHub
         </div>
