--- a/html-elements/nav-bar.html
+++ b/html-elements/nav-bar.html
@@ -13,7 +13,7 @@
           <li id="li_movie_list"><a href="../template/movieList.html"><i class="material-icons icon-white" style="font-size: 40px">format_list_bulleted</i></a></li>
           <li id="li_map"><a href="../template/index.html"><i class="material-icons icon-white" style="font-size: 40px">map</i></a></li>
           <li id="li_home"><a href="../template/home.html"><i class="material-icons icon-white" style="font-size: 40px">home</i></a></li>
-          <li><a class="dropdown-button" href="#" data-activates="account-dropdown">Account<i class="material-icons right">arrow_drop_down</i></a></li>
+          <li><a class="dropdown-trigger" href="#" data-target="account-dropdown">Account<i class="material-icons right">arrow_drop_down</i></a></li>
           <li id="li_account"><a href="../template/account.html"><i class="material-icons icon-white" style="font-size: 40px">account_circle</i></a></li>
         </ul>
       </div>
@@ -23,14 +23,13 @@
     <li>
       <div class="user-view">
         <div class="background">
+          <img src="../media/office.jpg">
         </div>
-        <img src="../media/office.jpg">
+        <a href="../template/account.html"><img class="circle" id="side-nav-user-img" src="../media/icons/account.png"></a>
+        <a><span id="side-nav-user-name" class="white-text name">Guest user</span></a>
+        <a><span id="side-nav-user-email" class="white-text email">Log in for more features</span></a>
       </div>
-      <a href="../template/account.html"><img class="circle" id="side-nav-user-img" src="../media/icons/account.png"></a>
-      <a><span id="side-nav-user-name" class="white-text name">Guest user</span></a>
-      <a><span id="side-nav-user-email" class="white-text email">Log in for more features</span></a>
-    </div>
-  </li>
-</ul>
+    </li>
+  </ul>
 </div>
 <!--########## ()()()()()() ##########-->
