--- a/html-elements/register.html
+++ b/html-elements/register.html
@@ -1,28 +1,29 @@
-<div class="col s12 m8 offset-m2">
+<div class="col s12 m8 offset-m2 l6 offset-l3">
   <div class="card white">
     <div class="card-content" style="height:100%">
-      <span class="card-title">Profile Information</span>
+      <span class="card-title"><a onclick="displaySignInForm();"><i class="material-icons">arrow_back</i></a>Register</span>
     </div>
     <div class="card-action">
       <div class="row">
-        <div class="input-field col s5">
-          <input value=" " type="text" id="name" class="validate">
-          <label for="input_name">Name</label>
-        </div>
-        <div class="input-field col s5">
-          <input value="" type="text" id="surname" class="validate">
-          <label for="input_surname">Surname</label>
+        <div class="input-field col s12 m7 pull-m5 l5 pull-l7">
+          <input value="" type="text" id="input_email" class="validate">
+          <label for="input_email">E-mail</label>
         </div>
       </div>
       <div class="row">
-        <div class="input-field col s3">
-          <input value="" type="text" id="age" class="validate">
-          <label for="input_age">Age</label>
+        <div class="input-field col s12 m7 pull-m5 l5 pull-l7">
+          <input id="input_password" type="password" class="validate">
+          <label for="input_password">Password</label>
         </div>
-        <div class="input-field col s6">
-          <input value="" type="text" id="country" class="validate">
-          <label for="country">Country</label>
+      </div>
+      <div class="row">
+        <div class="input-field col s12 m7 pull-m5 l5 pull-l7">
+          <input id="input_repeat_password" type="password" class="validate">
+          <label for="input_repeat_password">Repeat password</label>
         </div>
+      </div>
+      <div class="row">
+        <a class="waves-effect waves-light btn" onclick="registerEmailPassword()">Register</a>
       </div>
     </div>
   </div>
